tests/samples/negative/resources/move_indexed_element.ax
module move_indexed_element;

fn first<T>(values: []const T) -> T {
    return values[0];
}

fn main() -> i32 {
    return 0;
}
